got local storage working

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Linked my reset and style sheets.-->
-    <link rel="resetsheet" href="./reset.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="resetsheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Weather Dashboard</title>
 </head>
 
@@ -29,7 +29,7 @@
         </div>
         <hr>
 
-        <div class="search-history"></div>
+        <div id="search-history"></div>
     </div>
     <!--right column will be used to display all results, both current day and five day forecast.-->
     <div class="right-column">
@@ -53,7 +53,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
         integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
