got the search history buttons to populate and function properly

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button type="submit" id="search-button">Go</button>
           </div>
         </form>
+        <div id="search-history"></div>
       </div>
       <div id="weather-section">
         <div id="current-weather">current weather</div>
