got current weather to render to the webpage correctly

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
     <hr />
     <main>
       <div class="left-column">
-        <h2>Search For a City</h2>
         <form id="search-form">
           <div id="input-container">
-            <input type="text" id="input-field" placeholder="placeholder" />
-            <button type="submit" id="search-button">Go</button>
+            <h2>Search For a City</h2>
+            <div style="display: flex">
+              <input type="text" id="input-field" placeholder="placeholder" />
+              <button type="submit" id="search-button">Go</button>
+            </div>
           </div>
         </form>
         <div id="search-history"></div>
       </div>
       <div id="weather-section">
-        <div id="current-weather">current weather</div>
+        <div id="current-weather"></div>
         <div id="forecast">forecast</div>
       </div>
     </main>
