got the future forecast to render

--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
         <div id="search-history"></div>
       </div>
       <div id="weather-section">
-        <div id="current-weather"></div>
-        <div id="forecast">forecast</div>
+        <div id="current-weather">
+          <h1>Current Weather</h1>
+          <div id="weather-data"></div>
+
+        </div>
+        <div id="forecast">
+
+          <h1>Forecast</h1>
+          <div id="forecast-cards"></div>
+        </div>
       </div>
     </main>
   </body>
